# ames_ml_project1

./: .gitignore  README.md  pyproject.toml
